react-app/src/index.css
/* TODO Add site wide styles */
html, body {
    padding: 0px;
    margin: 0px;
    height: 100%;
    width: 100%;
    font-family: Open-Sans, sans-serif;
}

a {
    color: #ffc000;
}

a:hover {
    color: #d6a30a;
}

